Fixed it so users no longer wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,6 +326,7 @@ footer
 }
 
 .chatbox-settings-window {
+    white-space:nowrap;
     display: none;
     position:absolute;
     background:#F5F5F5;
